[package]
name = "competitions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "competition-groups"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
thirtyfour = { git = "https://github.com/stevepryde/thirtyfour", features = ["native-tls"]}
tokio = { version = "1.36.0", features = ["macros", "rt", "signal", "process"] }
anyhow = "1.0.80"
serde_json = "1.0.114"
port-selector = "0.1.6"
hex = "0.4.3"
